@@ -1,3 +1,8 @@
+2011-01-23  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Testing.h: Fix excess args to printf and incorrect setting of the
+	testPassed flag.
+
 2011-01-22  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* gnustep-tests.in:
